--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <br>
-<p><a href="./worldbuilding">Worldbuilding Project</a></p>
+<p><a href="./worldbuilding/magic/overview.html">Worldbuilding Project</a></p>
 </body>
 </html>
