better index file

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<br>
-<p><a href="./worldbuilding/magic/overview.html">Worldbuilding Project</a></p>
-</body>
+    <head>
+        <title>Weissfeuer's Grumpy Gnoll Corner</title>
+    </head>
+    <body>
+        <h1>Weissfeuer's Grumpy Gnoll Corner</h1>
+        <br>
+        <p><a href="./worldbuilding/index.html">Worldbuilding Project</a></p>
+        <p>Worldbuilding project for a fantasy setting I had in mind for years. WIP obviously.</p>
+    </body>
 </html>
