--- a/worldbuilding/magic/overview.html
+++ b/worldbuilding/magic/overview.html
@@ -38,7 +38,7 @@
         <p>These spheres exist only as categories for the common folk and only vaguely describe their sphere-composition.</p>
         <br>
         <p><a href="./spheres/elemental.html">Elemental (Arcane/Physical)</a></p>
-        <p><a href="./spheres/arcane.html">Mind (Arcane/Physical)</a></p>
+        <p><a href="./spheres/mind.html">Mind (Arcane/Physical)</a></p>
         <p><a href="./spheres/void.html">Void (Arcane, mutation)</a></p>
         <p><a href="./spheres/time_space.html">Time & Space (All)</a></p>
         <p><a href="./spheres/necromancy.html">Necromancy (Arcane/Physical/Soul)</a></p>
@@ -50,7 +50,7 @@
         <p>The practice of inscribing magical structures onto physical objects, allowing non-mages to cast magic.</p>
         <p><a href="./crystals.html">Crystals</a></p>
         <p>Crystallized magical energy, stored for later use or as a reagent.</p>
-        <p><a href="./glyphs.html">Focus</a></p>
+        <p><a href="./focus.html">Focus</a></p>
         <p>Object or practice to offload maintaining magic onto a certain object.</p>
     </body>
 </html> 
