--- a/worldbuilding/magic/spheres/spirit.html
+++ b/worldbuilding/magic/spheres/spirit.html
@@ -70,5 +70,11 @@
         <p>This obviously requires their previous body being restored to usable shape and the spirit being willing to re-attach to the body.</p>
         <p>These practices are however not practical. This is mostly due to the very limited understanding of there spirit sphere.</p>
         <p>Alternative methods exist however, based solely in healing magic. These require the spirit to be still attached to the body and have to be used within minutes after the "death".</p>
+        
+        <br>
+        <h2>Additional Notes</h2>
+        
+        <p><a href="./soul.html">Soul</a></p>
+        <p>What most people attribute spirit's effects to.</p>
     </body>
 </html>
