--- a/worldbuilding/template.html
+++ b/worldbuilding/template.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>TODO</title>
     </head>
     <body>
-        <h1></h1>
+        <h1>TODO</h1>
         
-        <p></p>
+        <p>TODO</p>
     </body>
 </html>
