--- a/worldbuilding/magic/spheres/elemental.html
+++ b/worldbuilding/magic/spheres/elemental.html
@@ -12,6 +12,8 @@
         <br>
         <p>Not to missunderstand, elemental magic is no clear science and more of a wide range of different practices.</p>
         <p>Such is, that most practices are tought only by a select group of people or known by birth, given the simpler variations.</p>
+        <br>
+        <p>[Different practices of magic may show up on this page or a dedicated one if enough information on the topic warrants it.]</p>
         
         <br>
         <h2>Fire Magic</h2>
