--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
         <br>
         <p><a href="./worldbuilding/index.html">Worldbuilding Project</a></p>
         <p>Worldbuilding project for a fantasy setting I had in mind for years. WIP obviously.</p>
+        <br>
+        <p><a href="https://telegram.me/Weissfeuer"></a></p>
+        <p>Message me on Telegram for any feedback or just to talk.</p>
     </body>
 </html>
