added minecraft plugin ref

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         <br>
         <p><a href="./worldbuilding/index.html">Worldbuilding Project</a></p>
         <p>Worldbuilding project for a fantasy setting I had in mind for years. WIP obviously.</p>
+		<br>
+		<p><a href="https://github.com/Weissfeuer/DistanceLeveledMonsters</a></p>
+		<p>Minecraft 1.13 plugin to scale monster stats based on destance from spawn.</p>
+		<br>
         <br>
         <p><a href="https://telegram.me/Weissfeuer"></a></p>
         <p>Message me on Telegram for any feedback or just to talk.</p>
