fixed telegram link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<p>Minecraft 1.13 plugin to scale monster stats based on destance from spawn.</p>
 		<br>
         <br>
-        <p><a href="https://telegram.me/Weissfeuer"></a></p>
+        <p><a href="https://telegram.me/Weissfeuer"></a>https://telegram.me/Weissfeuer</p>
         <p>Message me on Telegram for any feedback or just to talk.</p>
     </body>
 </html>
