added links for doodles and donations

--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
         <p><a href="./worldbuilding/index.html">Worldbuilding Project</a></p>
         <p>Worldbuilding project for a fantasy setting I had in mind for years. WIP obviously.</p>
 		<br>
-		<p><a href="https://github.com/Weissfeuer/DistanceLeveledMonsters</a></p>
+		<p><a href="https://github.com/Weissfeuer/DistanceLeveledMonsters">DistanceLeveledMonsters</a></p>
 		<p>Minecraft 1.13 plugin to scale monster stats based on destance from spawn.</p>
 		<br>
+		<p><a href="https://www.dropbox.com/sh/fw9etiz5qmfnt2v/AAC3CvPysUbKSw9fcKObP-0Ga?dl=0">Doodles Archive</a></p>
+		<p>Dumb doodles of people, read the txt in dropbox for more info.</p>
+		<br>
         <br>
-        <p><a href="https://telegram.me/Weissfeuer"></a>https://telegram.me/Weissfeuer</p>
+        <p><a href="https://telegram.me/Weissfeuer">https://telegram.me/Weissfeuer</a></p>
         <p>Message me on Telegram for any feedback or just to talk.</p>
+		<br>
+        <p><a href="https://www.ko-fi.com/weissfeuer">https://www.ko-fi.com/weissfeuer</a></p>
+        <p>If you want to donate stuff to me.</p>
     </body>
 </html>
