--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
         <p>Worldbuilding project for a fantasy setting I had in mind for years. WIP obviously.</p>
 		<br>
 		<p><a href="https://github.com/Weissfeuer/DistanceLeveledMonsters">DistanceLeveledMonsters</a></p>
-		<p>Minecraft 1.13 plugin to scale monster stats based on destance from spawn.</p>
+		<p>Minecraft 1.13 plugin to scale monster stats based on distance from spawn.</p>
 		<br>
 		<p><a href="https://www.dropbox.com/sh/fw9etiz5qmfnt2v/AAC3CvPysUbKSw9fcKObP-0Ga?dl=0">Doodles Archive</a></p>
 		<p>Dumb doodles of people, read the txt in dropbox for more info.</p>
 		<br>
+		<p>--- --- ---</p>
         <br>
         <p><a href="https://telegram.me/Weissfeuer">https://telegram.me/Weissfeuer</a></p>
         <p>Message me on Telegram for any feedback or just to talk.</p>
