weasyl link added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <p><a href="https://telegram.me/Weissfeuer">https://telegram.me/Weissfeuer</a></p>
         <p>Message me on Telegram for any feedback or just to talk.</p>
 		<br>
+		<p><a href="https://www.weasyl.com/~weissfeuer">https://www.weasyl.com/~weissfeuer</a></p>
+        <p>All the art I own in one place, I guess. Please be respectful.</p>
+		<br>
         <p><a href="https://www.ko-fi.com/weissfeuer">https://www.ko-fi.com/weissfeuer</a></p>
         <p>If you want to donate stuff to me.</p>
     </body>
