added 3D model export tutorial

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     </head>
     <body>
         <h1>Weissfeuer's Grumpy Gnoll Corner</h1>
-        <br>
         <h2>Projects</h2>
-        <br>
         <p><a href="./worldbuilding/index.html">Worldbuilding Project</a></p>
         <p>Worldbuilding project for a fantasy setting I had in mind for years. WIP obviously.</p>
 		<br>
@@ -18,16 +16,18 @@
 		<p>Dumb doodles of people, read the txt in dropbox for more info.</p>
 		<br>
 		<p>--- --- ---</p>
-        <br>
         <h2>Tutorials</h2>
-		<br>
 		<p><a href="https://t.me/HowToMakeTelegramGifs">https://t.me/HowToMakeTelegramGifs</a></p>
 		<p>Tutorial on how to make high quality Telegram gifs.</p>
 		<br>
+        <p><a href="https://t.me/HowToExport3DModels">https://t.me/HowToExport3DModels</a></p>
+		<p>Tutorial on how to export 3D models from games for use with VRChat or 3D printing.</p>
+		<br>
+        <p><a href="">WIP</a></p>
+		<p>Tutorial on how to set up Voicemeeter to split audio sources for streaming.</p>
+		<br>
 		<p>--- --- ---</p>
-        <br>
         <h2>How to contact me</h2>
-        <br>
         <p><a href="https://telegram.me/Weissfeuer">https://telegram.me/Weissfeuer</a></p>
         <p>Message me on Telegram for any feedback or just to talk.</p>
 		<br>
