added character section and  first entries

--- a/worldbuilding/index.html
+++ b/worldbuilding/index.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <h1>Index</h1>
-        <p><a href="">Characters</a> WIP</p>
-        <p><a href="">Races</a> WIP</p>
+        <p><a href="./characters/overview.html">Characters</a></p>
+        <p><a href="./races/overview.html">Races</a></p>
         <p><a href="./magic/overview.html">Magic</a></p>
     </body>
 </html>
