added todo to a character

--- a/worldbuilding/characters/flesh-shaper.html
+++ b/worldbuilding/characters/flesh-shaper.html
@@ -22,5 +22,8 @@
         <p>>> At full awareness, the creature can regenerate without any body at all, at a slower rate, making it immortal by any means outside of the spirit domain.</p>
         <br>
         <p>Character Development: Becoming aware of it's condition with the help of a spirit shaman.</p>
+        
+        <br>
+        <p>TODO: Influence of spirit magic to change shape</p>
     </body>
 </html>
