expanded and finished characters for now

--- a/worldbuilding/characters/gnoll_spirit-shaman.html
+++ b/worldbuilding/characters/gnoll_spirit-shaman.html
@@ -6,6 +6,8 @@
     <body>
         <h1>Gnoll Spirit Shaman</h1>
         
-        <p>yeah, big ToDo</p>
+        <p>yeah, mostly see the spirit magic page</p>
+        <br>
+        <p>backstory and others to follow</p>
     </body>
 </html>
