--- a/worldbuilding/characters/wolf_arcanist.html
+++ b/worldbuilding/characters/wolf_arcanist.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TODO</title>
+        <title>Wolf Arcanist</title>
     </head>
     <body>
-        <h1>TODO</h1>
+        <h1>Wolf Arcanist</h1>
         
-        <p>TODO</p>
+        <p>Race: Wolf (find more interesting name?)</p>
+        <br>
+        <p>kinda high society snob, not overly</p>
+        <p>considers himself better than "impure" arcane casters, as he can cast pure arcane magic</p>
+        <p>will still cooperate with others and his sense of superiority doesn't conflict with working with others</p>
+        <p>can be insufferable</p>
+        <p>highly competent with magic and has formal education</p>
+        <p>> has a lot of knowledge of lesser known topics and most meta-magic techniques (siphoning, crystal creation, focus crystal use etc)</p>
+        <br>
+        <p>As a pure arcane caster can:</p>
+        <p>Cast any "impure" arcane magic, using formal instruction and learning</p>
+        <p>Cast immensely destructive and unstable pure arcane magic</p>
+        <p>Create and maintain portals to other domains (same location) either with high focus or with the help of someone versed in the respective domain</p>
+        <p>> unstable portals can be created to lead to other location, potentially dangerous and demanding</p>
     </body>
 </html>
