added crystals and glyphs

--- a/worldbuilding/magic/crystals.html
+++ b/worldbuilding/magic/crystals.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TODO</title>
+        <title>Crystals</title>
     </head>
     <body>
-        <h1>TODO</h1>
+        <h1>Crystals</h1>
         
-        <p>TODO</p>
+        <p>Crystals or Magic Crystals are crystallizations of magical energy.</p>
+        <p>These can be consumed by any mage to gain the respective energy for their own use, whereby the crystal will be transformed back into energy and absorbed by the mage.</p>
+        <p>Crystals come in many shapes, usually a generally round shape with tiny spikes extruding from it.</p>
+        <p>Their shape does not change their function and can be changed by simple refinement processes (turning it into energy and re-crystallizing it).</p>
+        <br>
+        <p>Crystals will decay over time, based on the energies in their environment.</p>
+        <p>Low energy environments accelerate decay and high energy environment can even cause the crystal to grow (naturally occurring crystals).</p>
+        <p>To a small percentage, the crystal will always exchange energy with the environment and thereby become impure with the environment's energy. Specific storage procedures are recommended if this is to be avoided.</p>
+        <br>
+        <p>Crystals can contain any kind of magical energy as long as the energy can be crystallized (such as arcane, spirit, soul or even force).</p>
+        <p>Usually crystals are not pure, as in they contain multiple different spheres or energy, this is normal as hardly any environment has purely one type of energy.</p>
+        <p>Most people consider a crystal "pure" if it contains the same mixture of energies as their specific sub-domain (like fire magic being mostly arcane with some physical energy).</p>
+        <p>However, crystals can be refined to have only one type of energy if it is necessary.</p>
+        <p>Usually any mage will just not (be able to) absorb any unwanted kinds or energy the crystal might also contain.</p>
+        <br>
+        <p>Crystals can be created by any mage able to cast whatever energy they want to crystallize.</p>
+        <p>This process comes naturally to many races, mostly in inefficient forms and can be learned by everyone as long as they can cast magic.</p>
+        <p>Crystals can be created directly from the environment, but many find it easier to use energy contained in their own bodies to create the crystal.</p>
+        <p>Doing so will naturally drain the body of it's reserves, this is safe for everyone not suffering from void mutations.</p>
+        <p>Many mages make used of crystallizing their own reserves to safe them for later and allow their body to regenerate the energies on it's own.</p>
+        <p>Correctly applied this can make a mages energy output and creation a lot more efficient.</p>
+        <br>
+        <p>Special care has to be taken when storing a lot of crystals in close proximity.</p>
+        <p>Depending on the baseline stability of the energy, crystals might naturally try to fuse with each other or react and free their stored energy into the environment.</p>
     </body>
 </html>
