--- a/worldbuilding/races/overview.html
+++ b/worldbuilding/races/overview.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TODO</title>
+        <title>Races</title>
     </head>
     <body>
-        <h1>TODO</h1>
+        <h1>Races</h1>
         
-        <p>TODO</p>
+        <p>Currently ToDo, a bit of information can be gathered from some character pages for now.</p>
+        <br>
+        <p>Races planned, or at least touched:</p>
+        <p>> Gnoll</p>
+        <p>> ~Opossum</p>
+        <p>> ~Otter</p>
+        <p>> ~Wolf</p>
+        <p>> Flesh Shaper</p>
+        <p>> ~Goat</p>
+        <p>> Dragon</p>
+        <p>> ?Lizard</p>
+        <p>> ~?Bird</p>
     </body>
 </html>
