--- a/worldbuilding/magic/glyphs.html
+++ b/worldbuilding/magic/glyphs.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TODO</title>
+        <title>Glyphs</title>
     </head>
     <body>
-        <h1>TODO</h1>
+        <h1>Glyphs</h1>
         
-        <p>TODO</p>
+        <p>Glyphs or their practice, Glyphing is a technique to allow even non-mages to cast magic.</p>
+        <p>Mostly known by most people as spell scrolls, glyphs can be applied to about any material.</p>
+        <br>
+        <h2>Creation</h2>
+        <p>Glyphs recreate the forms drawn in various spheres of magic, like a normal mage would.</p>
+        <p>This is achieved by drawing the form in the physical plane using different methods.</p>
+        <p>They all include one or more reactive components that "cast" the spell for the user.</p>
+        <p>Some examples:</p>
+        <p>- special reactive paper with either adhesive and reactive dust or reactive paint.</p>
+        <p>- engraved stones with either reactive dust or fluid.</p>
+        <p>- reactive metal structures, usually using additional structural support (a small "labyrinth of metal wires").</p>
+        <br>
+        <p>In any case, the give glyph structure is usually inert, such as not to cast upon finishing construction of the gylph.</p>
+        <p>The magic is released using different methods, such as :</p>
+        <p>- finishing the glyph, e.g. connecting the last line on a scrolls with paint.</p>
+        <p>- drawing the glyph on an engraved stone by adding reactive fluid.</p>
+        <p>- heating the reactive metal.</p>
+        <p>- burning the scrolls so as to start the reaction of the paper or it's dust/paint.</p>
+        <br>
+        <p>In many if not all cases, such glyphs are one time use, consuming itself for the energy required to cast.</p>
+        <p>If the glyph is not consumed it is usually damaged by use and has to be replaced after a few casts.</p>
+        <br>
+        <p>Special attention has to be drawn to the construction of the glyph and the intended use of the magic.</p>
+        <p>"Fire and forget" magic is usually glyphed on consumable material, while longer lasting magic requires sturdier constructions.</p>
+        <br>
+        <h2>Non-Mage use and advanced glyphs</h2>
+        <p>As by design, magic cast by glyphs is usually outside the control of the user, even if they are a mage.</p>
+        <p>The pre-made glyph in contrast to magic-forms mages usually use is rigid and can usually not be adjusted in cast or later.</p>
+        <p>This makes the use cases of glyphs limited, specifically in more complex applications.</p>
+        <p>As such, your usual spell scroll would contain "Fireball" or something similar, glyph activated and pointed into a direction, if would shoot out a fireball.</p>
+        <br>
+        <p>Advanced glyphs in this case are glyphs that can't shouldn't be cast by non-mages.</p>
+        <p>They usually contain the base of magic or adjustable magic, which has to be "picked up" by the mage casting. (see focus)</p>
+        <p>The advantage here is that it allows mages to cast magic they usually wouldn't be able to or know how, given they are able to cast magic of that sphere at all.</p>
+        <p>It also allows for more complex magic that has to changed for a given situation (such as a specific illusion on a specific target).</p>
+        <br>
+        <h2>Light Glyphs</h2>
+        <p>Glyphs can become almost fully reusable using "proper" light magic.</p>
+        <p>This form of light magic is only known by few and a closely guarded secret, but using it, you can make glyphs that rely entirely on it.</p>
+        <p>Glyphs like this only provide the form the magic should take, the energy comes from the caster in form of precise light.</p>
+        <p>This reduces the abuse the material takes and allows the caster to change the magic based on the properties of the light used, instead of just fueling the magic as with regular glyphs.</p>
+        <p>Light glyphs are highly complex and usually custom-made by the user themselves, oftentimes also modular in their construction.</p>
     </body>
 </html>
