fixed typo and added stub article

--- a/worldbuilding/magic/focus.html
+++ b/worldbuilding/magic/focus.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TODO</title>
+        <title>Focus</title>
     </head>
     <body>
-        <h1>TODO</h1>
+        <h1>Focus</h1>
         
-        <p>TODO</p>
+        <p>Focus, or the technique to maintain magic.</p>
+        <p></p>
+        <br>
+        <h2>Index</h2>
+        <p></p>
+        <br>
+        <h2>Offloading</h2>
+        <p></p>
     </body>
 </html>
