--- a/worldbuilding/magic/overview.html
+++ b/worldbuilding/magic/overview.html
@@ -33,7 +33,8 @@
         <br>
         <h2>Secondary spheres</h2>
         
-        <p>Secondary spheres are comprised of a mix of multiple primary spheres. They are do not have sub-dimensions and cannot create elementals.</p>
+        <p>Secondary spheres are comprised of a mix of multiple primary spheres. They do not have sub-dimensions and cannot create elementals.</p>
+        <p>Strictly speaking, secondary spheres are more akin to conventions in magic use, rather than their own entities.</p>
         <p>The common populous might call beings of multiple spheres "elementals" as long as none of those spheres include physical, due to a lack of magical understanding and the fact that they appear "invisible" to the naked eye.</p>
         <p>These spheres exist only as categories for the common folk and only vaguely describe their sphere-composition.</p>
         <br>
