--- a/worldbuilding/magic/focus.html
+++ b/worldbuilding/magic/focus.html
@@ -7,12 +7,38 @@
         <h1>Focus</h1>
         
         <p>Focus, or the technique to maintain magic.</p>
-        <p></p>
+        <p>De facto only describing that mages need to concentrate on magic and use up "mental capacity" to keep effects alive.</p>
+        <p>Short lived magic often only requires a initial setup and barely any focus, often mages can keep focus just by being very trained or used to keeping certain magic up.</p>
+        <p>The amount of focus require thereby depends on general magic skill, mental fortitude, intuition and magic complexity.</p>
+        <p>Keeping focus is similar to memorizing any amount of abstract information.</p>
         <br>
         <h2>Index</h2>
-        <p></p>
+        <p>Most magic is very complex, this comes in contrast to how easily most mages handle their magic.</p>
+        <p>Lifelong training or an inborn talent and intuition for certain spheres is what allows mages to cast magic in a timely manner at all.</p>
+        <p>In order to manage the planning overhead, in particular with magic that has to be maintained longer than it's initial cast, mages use indexes.</p>
+        <p>As the name implies, an index contains the most pertinent information about a given magic effect, such as, but not limited to:</p>
+        <p>- amount and type of energy required to maintain</p>
+        <p>- shape of the form and the sphere it's cast in</p>
+        <p>- position and shape of sphere presence employed in casting, usually arcane</p>
+        <p>- function, purpose and additional notes (depending on preference)</p>
+        <p>Indexes are usually cast as meta-magic in addition with the base effect, interwoven with it, so when one disappears, the other does as well.</p>
+        <br>
+        <p>Indexes can take any shape and can even be invisible.</p>
+        <p>Given that they are supposed to be an aid for the mage, indexes are usually visible in the physical sphere, for highest comfort.</p>
+        <p>While the look of a given index is up to each mage, certain common practices have been established over time.</p>
+        <br>
+        <p>The most common form of index is a glowing disk of lights, using script to convey information on it's surface, with a hole in it's center.</p>
+        <p>This disk is usually floating and rotating around it's center, "worn" on a mages arm, horn or tail, whichever is convenient.</p>
+        <br>
+        <p>The script on indexes is readable to all, as normal script would be, it is thereby commonplace to invent personal shorthands or cyphers.</p>
+        <p>This is done to stop possible unwanted interaction with the magic through other mages.</p>
         <br>
         <h2>Offloading</h2>
-        <p></p>
+        <p>Given a reasonably sophisticated index, about any magic effect can be offloaded.</p>
+        <p>Offloading describes the technique to hand over magic effects to other mages or specifically prepared crystals.</p>
+        <p>Handing over magic is quite similar to how you would hand over any fragile construct in your hands to the hands of another.</p>
+        <p>Given a crystal that has been prepared / created for the purpose of being able to take over magic,</p>
+        <p>any suitably simple magic, or any magic with a complex enough index, can be offloaded to such a crystal.</p>
+        <p>Given the effect, the crystal will maintain and fuel the magic until the crystal is drained.</p>
     </body>
 </html>
