added more stuff, mostly void

--- a/worldbuilding/characters/overview.html
+++ b/worldbuilding/characters/overview.html
@@ -11,6 +11,7 @@
         <p><a href="./otter_monk.html">Otter Monk</a></p>
         <p><a href="./wolf_arcanist.html">Wolf Arcanist</a></p>
         <p><a href="./flesh-shaper.html">Flesh Shaper</a></p>
+        <p><a href="./otter_ice-mage.html">Otter Ice-Mage</a></p>
         <p><a href="./goat_void-sick_fire-mage.html">Goat void-sick Fire-Mage</a></p>
         <p><a href="./dragon_light-smith_gun-slinger.html">Dragon Light-Smith Gunslinger</a></p>
     </body>
