--- a/worldbuilding/magic/spheres/necromancy.html
+++ b/worldbuilding/magic/spheres/necromancy.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TODO</title>
+        <title>Necromancy</title>
     </head>
     <body>
-        <h1>TODO</h1>
+        <h1>Necromancy</h1>
         
-        <p>TODO</p>
+        <p>Necromancy is a cover term for the magical use of soul and the creation of arcane constructs.</p>
+        <p>It is shunned in most societies for it's name-sake ability to "revive the dead".</p>
+        <p>Necromancy is however much more than that and also more complicated than what a common person might know about it.</p>
+        <br>
+        <h2>Use of Soul</h2>
+        <p></p>
+        <br>
+        <h2>Shunned practices</h2>
+        <p></p>
+        <br>
+        <h2>Allowed practices</h2>
+        <p></p>
     </body>
 </html>
