--- a/worldbuilding/magic/spheres/void.html
+++ b/worldbuilding/magic/spheres/void.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TODO</title>
+        <title>Void</title>
     </head>
     <body>
-        <h1>TODO</h1>
+        <h1>Void</h1>
         
-        <p>TODO</p>
+        <p>Void magic is the result of a genetic mutation (or, rarer, mutilation) of a mage's arcane presence.</p>
+        <p>It can thereby not be learned, although similar effects can be achieved using regular arcane magic.</p>
+        <br>
+        <p>A change in structure of the arcane presence makes an affected mage unable to store and regulate magic energy, draining their own energies to sustain themselves.</p>
+        <p>Void-sick mages are however highly dependent on arcane energy, a lack of will cause the following (in order):</p>
+        <p>- Fatigue</p>
+        <p>- Inability to cast magic</p>
+        <p>- Additional damage to the arcane presence, as it is starting to self-cannibalize</p>
+        <p>- Physical damage to the mage's body</p>
+        <p>- Death</p>
+        <br>
+        <p>In order to counteract the constant drain on energy, a void mage will unwillingly siphon arcane energy from the environment.</p>
+        <p>This effect cannot be stopped by the mage themselves, only slowed or accelerated using focus.</p>
+        <p>Forcefully stopping this effect results in constant loss of energy and above described effects.</p>
+        <p>The rate of siphoning depends on the mage's current reserves, higher drain with lower levels of stored energy, and vice versa.</p>
+        <br>
+        <h2>Issues</h2>
+        <p>Given an environment with average energy levels, this is not a problem on it's own.</p>
+        <p>The issue lies with that face, that the mere presence of a void-sick mage drains energies around them.</p>
+        <p>This siphoning is undirected and can and will disrupt nearby magic forms and maintained effects, making it hard even for the mage themselves to cast magic.</p>
+        <br>
+        <p>Given this unpredictability, void mages are usually shunned by their social environment, even more so in societies that heavily rely on magic or employ complex magic.</p>
+        <p>In addition to that, using arcane sight, the arcane presence of affected mages appears sickening to most.</p>
+        <p>A void-sick presence is riddled with holes and tears, slightly distorting the arcane sphere around it, while draining energy.</p>
+        <p>Direct contact with the void presence will cause harm to other mage's presences, being slowly, if inefficiently, drained and consumed.</p>
+        <p>Even looking at such a presence can be painful depending on proximity to the void-presence.</p>
+        <br>
+        <h2>Use as Magic</h2>
+        <p>Void mages can learn to control their condition over time, while never being the master of it, as they rely on it for survival.</p>
+        <p>With enough experience, void magic can be directed slightly, most commonly for a close range disruption of magic.</p>
+        <p>In more grim ways, void magic can also be used to cripple other arcane presences, so as to stop mages from casting at all, up to permanently.</p>
+        <p>This doesn't result in more void mages, but will still cripple their arcane presence like you would cripple a limb.</p>
+        <br>
+        <p>More crafty void mages can make use of their condition in clever ways.</p>
+        <p>Their aptitude allows them to regenerate magic way faster than a normal mage would passively.</p>
+        <p>Emptying their reserves with normal magic, then siphoning with void allows for a high output of magic, given the mage is able to balance the flow such as to not cause self-harm.</p>
+        <p>A void mage might even want to deliberately keep their reserves low such as to cause more drain with void.</p>
+        <p>All of these techniques are dangerous if untrained and can harm the caster.</p>
     </body>
 </html>
