added force magic

--- a/worldbuilding/magic/spheres/physical.html
+++ b/worldbuilding/magic/spheres/physical.html
@@ -5,7 +5,38 @@
     </head>
     <body>
         <h1>Physical Plane</h1>
-        
-        <h1>Force Magic</h1>
+        <p>Also called the "plane of the body", the "flesh plane", the "normal plane" or the "force plane" to practitioners of force magic.</p>
+        <p>While not all creatures exist on the physical plane, it is very likely that you are one, and therefore will only encounter other creatures that also live there.</p>
+        <p>The physical plane works like you would expect with many of the rules according to the real world.</p>
+        <p>It is the plane most creatures perceive easiest,the only sphere non-mages can see, and the plane most people assume to be the base of life.</p>
+        <p>The Physical is very low in magical energy, in contrast to all others, and most people assume you cannot cast magic in the physical plane at all.</p>
+        <br>
+        <h2>Force Magic</h2>
+        <p>Casting magic through such a low energy sphere is truly a feat, and something most people don't even think about.</p>
+        <p>Physical magic, or more commonly known as force magic, can be cast in two ways:</p>
+        <br>
+        <p>Firstly, the way it was discovered initially, through incredible bodily awareness and composure.</p>
+        <p>Mastering your own body and the way it reacts with the world around it.</p>
+        <p>The first "force mages", a term coined by a later group, were monks who practiced restraint and perfection of the body.</p>
+        <p>Their intent was not the use of such magic and this discovery came as a byproduct of their training.</p>
+        <p>These days people may want to train in this tradition, although practiced monks will still only think of it as a side-effect and not something to strive for.</p>
+        <br>
+        <p>The second group to discover force magic was a group of arcane mages wanting to imitate what the monks could do.</p>
+        <p>Force magic cast firstly through the arcane is much easier to learn and potentially more powerful, given the ease of access to arcane energy.</p>
+        <br>
+        <p>Bodily force magic is manly "used" to enhance one's body, strengthening muscles or hardening skin.</p>
+        <p>It's main drawback are the difficulty of mastering it as well as it's short range, and thereby limited use.</p>
+        <p>Force magic is not precise and hard to maintain, even with training.</p>
+        <p>In combat it is best used to enhance one's body, deflect blows, create short-range "weapons or barriers.</p>
+        <p>Force barriers, while famous, are hard to create or maintain, usually requiring multiple mages to cooperate, even then only lasting seconds.</p>
+        <p>The advantages of force magic are few, related mostly to it being not well known and mostly a novelty.</p>
+        <p>The effects of force magic are almost invisible, both to the naked eye and to any arcane presence, since no arcane magic is used.</p>
+        <p>Any such effects can only be seen using the environment, such as rain or fog.</p>
+        <br>
+        <p>Absolute masters of force magic may be able to fully, but crudely control their own body, such as keeping a stopped heart beating.</p>
+        <p>Although any such effects require immense amounts of focus, it is best to search a healer quickly.</p>
+        <br>
+        <p>The arcane-fueled use of force magic is as mentioned previously easier and more powerful, with the drawback of the cast being visible to the arcane this way.</p>
+        <p>There isn't much use for such a imprecise and short-range magic usually, most mages that specialize on it do so for personal reasons mostly.</p>
     </body>
 </html>
