--- a/worldbuilding/magic/spheres/divine.html
+++ b/worldbuilding/magic/spheres/divine.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TODO</title>
+        <title>Divine Magic</title>
     </head>
     <body>
-        <h1>TODO</h1>
+        <h1>Divine Magic</h1>
         
-        <p>TODO</p>
+        <p></p>
     </body>
 </html>
