added community works

--- a/worldbuilding/index.html
+++ b/worldbuilding/index.html
@@ -8,5 +8,8 @@
         <p><a href="./characters/overview.html">Characters</a></p>
         <p><a href="./races/overview.html">Races</a></p>
         <p><a href="./magic/overview.html">Magic</a></p>
+        <br>
+        <p><a href="./community_work/overview.html">Community Work</a>, Where other people can write things</p>
+        <p>Finished / approved pages will be implemented into the main sections.</p>
     </body>
 </html>
