SOLRYT3 HAS EDITED COMMUNITY WORK.

--- a/worldbuilding/community_work/overview.html
+++ b/worldbuilding/community_work/overview.html
@@ -11,6 +11,7 @@
         <p>Try to keep the place tidy.</p>
         <p>Pages that are finished and approved will be added to the main section.</p>
         <p>You can also just write down ideas and let me makes the full page later.</p>
+	<p> Hi! Sol edited this page :)</p>
         <br>
         <p>If you want to add / edit, request git access from me and get yourself git (or a git repository manager) and optionally an html editor.</p>
     </body>
